Fixes an issue causing buttons to appear too small

--- a/src/components/styles/UITab.scss
+++ b/src/components/styles/UITab.scss
@@ -33,10 +33,10 @@
     margin-top: -16px;
 
     &.E0Zk9b {
-        justify-content: initial;
+        justify-content: space-between;
     }
 }
 
 .stadiaplus_ui-button {
-    width: 116.156px;
+    width: 130.677px;
 }
